--- a/src/assets/translations/es.json
+++ b/src/assets/translations/es.json
@@ -416,7 +416,9 @@
       "verifySignature": "Verificar la firma",
       "cannotGetAccount": "No se puede obtener la cuenta",
       "cannotGetXpub": "No se puede obtener xpub",
-      "signatureError": "Mensaje de error al firmar. Vuelva a intentarlo"
+      "signatureError": "Mensaje de error al firmar. Vuelva a intentarlo",
+      "selectAccount": "Seleccione la cuenta que desea utilizar",
+      "select": "Seleccione"
     }
   }
 }
