--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -416,7 +416,9 @@
       "verifySignature": "Vérification de la signature",
       "cannotGetAccount": "Impossible d'obtenir un compte",
       "cannotGetXpub": "Impossible d'obtenir la xpub",
-      "signatureError": "Message d'erreur lors de la signature. Veuillez réessayer"
+      "signatureError": "Message d'erreur lors de la signature. Veuillez réessayer",
+      "selectAccount": "Sélectionnez le compte que vous souhaitez utiliser",
+      "select": "Sélectionner"
     }
   }
 }
