--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -34,6 +34,7 @@
       "nonCustodial": "Non-custodial",
       "noKyc": "No KYC",
       "in1minute": "In 1 minute",
+      "licensedBy": "Licensed by",
       "createAccount": "Create account",
       "orConnectBy": "or connect by",
       "scanActivationQRcode": "Scan activation QR code",
