--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -35,6 +35,7 @@
       "noKyc": "No KYC",
       "in1minute": "In 1 minute",
       "licensedBy": "Licensed by",
+      "finma": "Swiss Financial Market Supervisory Authority",
       "createAccount": "Create account",
       "orConnectBy": "or connect by",
       "scanActivationQRcode": "Scan activation QR code",
