--- a/src/assets/translations/de.json
+++ b/src/assets/translations/de.json
@@ -186,7 +186,11 @@
       "logout": "Abmelden",
       "confirmLogout": "Bestätigen Sie die Abmeldung",
       "confirmLogoutDescription": "Nach der Abmeldung müssen Sie den Aktivierungscode erneut einscannen oder eine Verbindung mit den Anmeldedaten herstellen",
-      "logoutSuccessful": "Erfolgreiche Trennung der Verbindung"
+      "logoutSuccessful": "Erfolgreiche Trennung der Verbindung",
+      "tickets": "Automatische Quittungen",
+      "ticketsPrinting": "Automatischer Belegdruck",
+      "testPrint": "Testdruck",
+      "ticketsPrintingDescription": "Zahlungsbelege können automatisch gedruckt werden, nachdem jede Rechnung bezahlt wurde"
     },
     "payoutConfig": {
       "title": "Konfiguration der Auszahlung",
@@ -421,5 +425,16 @@
       "selectAccount": "Wählen Sie das Konto, das Sie verwenden möchten",
       "select": "Wählen Sie"
     }
+  },
+  "printTicket": {
+    "paidInBitcoin": "Bezahlt in Bitcoin",
+    "amount": "Betrag",
+    "fiatAmount": "Fiat-Betrag",
+    "paidVia": "Bezahlt über",
+    "paidAt": "Bezahlt am",
+    "note": "Hinweis",
+    "invoiceId": "Rechnungs-ID",
+    "thanks": "Danke für den Kauf mit ₿itcoin",
+    "poweredBy": "Angetrieben durch"
   }
 }
