--- a/src/assets/translations/pt.json
+++ b/src/assets/translations/pt.json
@@ -186,7 +186,11 @@
       "logout": "Terminar sessão",
       "confirmLogout": "Confirmar terminar sessão",
       "confirmLogoutDescription": "Depois de terminar a sessão, terá de digitalizar novamente o código de ativação ou entrar com as credenciais",
-      "logoutSuccessful": "Sessão terminada com sucesso"
+      "logoutSuccessful": "Sessão terminada com sucesso",
+      "tickets": "Recibos automáticos",
+      "ticketsPrinting": "Impressão automática de recibos",
+      "testPrint": "Impressão de teste",
+      "ticketsPrintingDescription": "Os recibos de pagamento podem ser impressos automaticamente após o pagamento de cada fatura"
     },
     "payoutConfig": {
       "title": "Configurações de pagamento",
@@ -421,5 +425,16 @@
       "selectAccount": "Selecionar a conta que pretende utilizar",
       "select": "Selecionar"
     }
+  },
+  "printTicket": {
+    "paidInBitcoin": "Pago em Bitcoin",
+    "amount": "Montante",
+    "fiatAmount": "Montante Fiat",
+    "paidVia": "Pago através de",
+    "paidAt": "Pago em",
+    "note": "Nota",
+    "invoiceId": "ID da fatura",
+    "thanks": "Obrigado por comprar com ₿itcoin",
+    "poweredBy": "Alimentado por"
   }
 }
