--- a/src/assets/translations/fi.json
+++ b/src/assets/translations/fi.json
@@ -100,6 +100,9 @@
         },
         "referralCode": {
           "doesntExists": "Suosittelijakoodia ei tunnistettu"
+        },
+        "iban": {
+          "blacklisted": "Tämän IBAN-tilinumeron pankki on mustalla listalla."
         }
       }
     },
