--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -100,6 +100,9 @@
         },
         "referralCode": {
           "doesntExists": "Ce code de parrainage n'existe pas"
+        },
+        "iban": {
+          "blacklisted": "La banque de cet IBAN est sur liste noire"
         }
       }
     },
