--- a/src/assets/translations/pt.json
+++ b/src/assets/translations/pt.json
@@ -100,6 +100,9 @@
         },
         "referralCode": {
           "doesntExists": "Este código de referência não existe"
+        },
+        "iban": {
+          "blacklisted": "O banco deste IBAN está na lista negra"
         }
       }
     },
