--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -139,6 +139,7 @@
       "paidWith": "Paid with",
       "transactionId": "Transaction ID",
       "openWallet": "Open wallet",
+      "noAvailableWallet": "No wallet available",
       "copy": "Copy",
       "pendingConfirmations": "Pending confirmations",
       "invoiceExpired": "Invoice expired",
