--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -20,6 +20,9 @@
     "days": "jours",
     "hours": "heures",
     "version": "Version {{tag}}",
+    "enter": "Saisir",
+    "close": "Fermer",
+    "optional": "Optionnel",
     "errors": {
       "invalidBitcoinAddress": "Adresse bitcoin invalide",
       "unableGetRates": "Impossible d'obtenir les taux",
@@ -80,7 +83,6 @@
       "currency": "Devise",
       "currencyDescription": "La devise par défaut de votre entreprise",
       "referralCode": "Code de parrainage",
-      "optional": "Optionnel",
       "referralCodeDescription": "Si quelqu'un vous a amené à Swiss Bitcoin Pay, écrivez ici son code de parrainage",
       "submitDescription1": "En créant votre compte, vous acceptez nos",
       "submitDescription2": "et notre",
@@ -151,6 +153,7 @@
       "copyLightning": "Copier la facture",
       "scanToYourPhone": "Scannez pour accéder à cette page sur votre téléphone",
       "scanToPayIn": "Scanner pour payer en Bitcoin par",
+      "scanToVerify": "Scanner pour vérifier votre identité",
       "or": "ou",
       "scanToWithdraw": "Scanner pour recevoir des bitcoins via",
       "printReceipt": "Imprimer reçu"
@@ -224,9 +227,9 @@
       "nextAddresses": "Adresses suivantes",
       "recommended": "recommandé",
       "messageToSign": "Message à signer",
-      "messageToSignDetails": "Signez ce message avec le portefeuille Bitcoin que vous avez saisi.",
+      "messageToSignDetails": "Signez ce message avec le portefeuille Bitcoin que vous avez entré",
       "yourSignature": "Votre signature",
-      "yourSignatureDetails": "Signature obtenue à partir de votre portefeuille",
+      "yourSignatureDetails": "Signature obtenue de votre portefeuille",
       "invalidSignature": "Signature invalide",
       "payInvoiceToCertify": "Payez cette facture de 1 sat pour certifier que vous contrôlez votre adresse Lightning.",
       "openWallet": "Ouvrir portefeuille",
@@ -250,7 +253,6 @@
       "createYourBitcoinWallet": "Créez votre portefeuille Bitcoin",
       "iban": "IBAN",
       "bankReference": "Référence de virement",
-      "optional": "Optionnel",
       "yourName": "Votre nom d'entreprise ou personnel",
       "ownerName": "Nom du propriétaire",
       "yourAddress": "Votre adresse",
