--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -266,7 +266,7 @@
       "ibanInvalid": "IBAN non valido",
       "zipInvalid": "CAP non valido",
       "submit": "Invia",
-      "bitboxConnectSuccess": "Il BitBox02 è stato collegato con successo. È possibile scollegarlo.",
+      "hardwareConnectSuccess": "Il {{hardwareWallet}} è stato collegato con successo. È possibile scollegarlo.",
       "patchSettingNeedsEmailValidation": "Conferma le nuove impostazioni tramite l'e-mail ricevuta",
       "error": {
         "iban": {
